--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
 
 	<!-- Page Top section -->
-	<section class="page-top-section set-bg" data-setbg="img/page-top-bg.jpg">
+	<section class="page-top-section set-bg" data-setbg="img/page-top-bg.png">
 		<div class="container">
 			<h2>About us</h2>
 			<div class="site-breadcrumb">
@@ -107,7 +107,7 @@
 
 
 	<!-- Milestones section -->
-	<section class="milestones-section set-bg" data-setbg="img/milestones-bg.jpg">
+	<section class="milestones-section set-bg" data-setbg="img/milestones-bg.png">
 		<div class="container">
 			<div class="row milestones-top-text">
 				<div class="col-lg-8">
