--- a/service.html
+++ b/service.html
@@ -57,7 +57,7 @@
 
 
 	<!-- Page Top section -->
-	<section class="page-top-section set-bg" data-setbg="img/page-top-bg.jpg">
+	<section class="page-top-section set-bg" data-setbg="img/page-top-bg.png">
 		<div class="container">
 			<h2>Services</h2>
 			<div class="site-breadcrumb">
