--- a/index.html
+++ b/index.html
@@ -36,35 +36,21 @@
 		<div class="loader"></div>
 	</div>
 
-	<!-- Header section -->
-	<header class="header-section">
-		<!-- <a href="./index.html" class="site-logo"><img src="./img/logo.png" alt=""></a> -->
-		<div class="nav-switch">
-			<i class="fa fa-bars"></i>
-		</div>
-		<div class="nav-warp">
-			<div class="user-panel">
-				<a href="#community">Join the Community</a>
-			</div>
-		</div>
-	</header>
 	<!-- Header section end -->
 
 
 	<!-- Hero section -->
-	<section class="hero-section set-bg" data-setbg="img/bg.jpg">
+	<section class="hero-section set-bg" data-setbg="img/bg-61.png">
 		<div class="container h-100">
 			<div class="hero-content text-white">
 				<div class="row">
 					<div class="col-lg-6 pr-0">
-						<h2>ExO Launchpad</h2>
+						<h2>ExO Leaders</h2>
 						<p>Launchpad helps you build a new type of organization, an ExO or Exponential Organization.An ExO is a
 							purpose-driven venture that leverages exponential technologies and a set of common attributes to grow and
 							transform the world </p>
+							<a class="site-btn" href="#community">Join the Community</a>
 					</div>
-				</div>
-				<div class="hero-rocket">
-					<img src="./img/rocket.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -76,7 +62,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 about-text">
-					<h3>Why choose our company?</h3>
+					<h3>Are you ready to transform?</h3>
 					<p>Nullam lacinia ex eleifend orci porttitor, suscipit interdum augue condimentum. Etiam pretium turpis eget nibh
 						laoreet iaculis. Vivamus auctor mi eget odio feugiat, quis aliquet velit ornare. Integer egestas sit amet neque
 						sed elementum. Fusce ut turpis felis. Etiam pretium pharetra augue, ac porttitor dolor consequat eget. Cras
@@ -85,7 +71,7 @@
 					<a href="#" class="site-btn">Read More</a>
 				</div>
 				<div class="col-lg-6">
-					<img src="./img/about.jpg" alt="">
+					<img src="./img/dreamer.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -94,11 +80,11 @@
 
 
 	<!-- Domain search section -->
-	<section class="domain-search-section spad set-bg" data-setbg="img/domain-bg.jpg">
+	<section class="domain-search-section spad set-bg" data-setbg="img/bg.png">
 		<div class="container">
 			<div class="section-title st-white">
-				<img src="./img/section-title-icon.png" alt="#">
-				<p>ExO Launchpad class</p>
+				<span class="fa fa-rocket"></span>
+				<p>ExO Launchpad</p>
 				<h2>Do you want to join an upcoming <br>ExO Launchpad class?</h2>
 			</div>
 			<div class="domain-form-warp">
@@ -140,164 +126,40 @@
 							<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 							<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ccfff1ccf7951d4ec0af22cac_8ca8438865"
 								 tabindex="-1" value=""></div>
-							<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+							<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="site-btn"></div>
 						</div>
 					</form>
 				</div>
 				<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
 				<script type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'NAME'; ftypes[1] = 'text'; fnames[2] = 'LOCATION'; ftypes[2] = 'text'; fnames[3] = 'LINKEDIN'; ftypes[3] = 'text'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
-				<!--End mc_embed_signup-->
-				<p>Nullam lacinia ex eleifend orci porttitor, suscipit interdum augue condimentum. Etiam pretium turpis eget nibh
-					laoreet iaculis</p>
 			</div>
 		</div>
 	</section>
 	<!-- Domain search section end -->
 
 
-	<!-- Skills & testimonials section -->
-	<section class="skills-and-testimonials-section spad">
+	<section class="about-section spad pt-18">
 		<div class="container">
 			<div class="row">
-				<!-- Skills -->
-				<div class="col-lg-6">
-					<div class="single-progress-item">
-						<p>Illustrator</p>
-						<div class="progress-bar-style" data-progress="80" data-bgcolor="#eb2b63"></div>
-					</div>
-					<div class="single-progress-item">
-						<p>Photoshop</p>
-						<div class="progress-bar-style" data-progress="90" data-bgcolor="#eb2bae"></div>
-					</div>
-					<div class="single-progress-item">
-						<p>SEO</p>
-						<div class="progress-bar-style" data-progress="80" data-bgcolor="#d22beb"></div>
-					</div>
-					<div class="single-progress-item">
-						<p>E-commerce</p>
-						<div class="progress-bar-style" data-progress="60" data-bgcolor="#972beb"></div>
-					</div>
-					<div class="single-progress-item">
-						<p>HTML</p>
-						<div class="progress-bar-style" data-progress="70" data-bgcolor="#732beb"></div>
-					</div>
+					<div class="col-lg-6">
+							<img src="./img/finder.png" alt="">
+						</div>
+				<div class="col-lg-6 about-text">
+					<h3>Be the change in the world</h3>
+					<p>Nullam lacinia ex eleifend orci porttitor, suscipit interdum augue condimentum. Etiam pretium turpis eget nibh
+						laoreet iaculis. Vivamus auctor mi eget odio feugiat, quis aliquet velit ornare. Integer egestas sit amet neque
+						sed elementum. Fusce ut turpis felis. Etiam pretium pharetra augue, ac porttitor dolor consequat eget. Cras
+						tempor suscipit enim vehicula ultrices. Mauris sed orci blandit, rhoncus massa non, tincidunt odio. Ut
+						ullamcorper lobortis hendrerit. </p>
+					<a href="#" class="site-btn">Read More</a>
 				</div>
-				<!-- Testimonials -->
-				<div class="col-lg-6">
-					<div class="testimonials-slider owl-carousel">
-						<div class="testimonial-item">
-							<div class="ti-content">
-								<p>Nullam lacinia ex eleifend orci porttitor, suscipit interdum augue condimentum. Etiam pretium turpis eget
-									nibh laoreet iacu-lis.Nullam lacinia ex eleifend orci porttitor, suscipit interdum augue condimentum. iaculis.</p>
-							</div>
-							<div class="ti-author-pic set-bg" data-setbg="img/review/1.jpg"></div>
-							<div class="ti-author">
-								<h6>Michael Smith</h6>
-								<span>Client</span>
-							</div>
-						</div>
-						<div class="testimonial-item">
-							<div class="ti-content">
-								<p>Nullam lacinia ex eleifend orci porttitor, suscipit interdum augue condimentum. Etiam pretium turpis eget
-									nibh laoreet iacu-lis.Nullam lacinia ex eleifend orci porttitor, suscipit interdum augue condimentum. iaculis.</p>
-							</div>
-							<div class="ti-author-pic set-bg" data-setbg="img/review/1.jpg"></div>
-							<div class="ti-author">
-								<h6>Michael Smith</h6>
-								<span>Client</span>
-							</div>
-						</div>
-						<div class="testimonial-item">
-							<div class="ti-content">
-								<p>Nullam lacinia ex eleifend orci porttitor, suscipit interdum augue condimentum. Etiam pretium turpis eget
-									nibh laoreet iacu-lis.Nullam lacinia ex eleifend orci porttitor, suscipit interdum augue condimentum. iaculis.</p>
-							</div>
-							<div class="ti-author-pic set-bg" data-setbg="img/review/1.jpg"></div>
-							<div class="ti-author">
-								<h6>Michael Smith</h6>
-								<span>Client</span>
-							</div>
-						</div>
-					</div>
-				</div>
+
 			</div>
 		</div>
 	</section>
-	<!-- Skills & testimonials section end -->
-
-
-	<!-- Pricing section -->
-	<section class="pricing-section spad pt-0">
-		<div class="container">
-			<div class="section-title">
-				<img src="./img/section-title-icon.png" alt="#">
-				<p>The best out there</p>
-				<h2>See our features</h2>
-			</div>
-			<div class="row">
-				<div class="col-lg-4 col-md-8 offset-md-2 offset-lg-0">
-					<div class="pricing-plan">
-						<div class="pricing-title">
-							<h4>Basic Plan</h4>
-						</div>
-						<div class="pricing-body">
-							<h2>$9<span>/Month</span></h2>
-							<ul>
-								<li>1GB storage</li>
-								<li>3GB bandwidth</li>
-								<li>Free Email Addresses</li>
-								<li>24/7 security monitoring</li>
-								<li>24/7 technical support</li>
-							</ul>
-							<a href="" class="site-btn">Get Plan</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-8 offset-md-2 offset-lg-0">
-					<div class="pricing-plan gold-plan">
-						<div class="pricing-title">
-							<h4>STAR Plan</h4>
-						</div>
-						<div class="pricing-body">
-							<h2>$9<span>/Month</span></h2>
-							<ul>
-								<li>1GB storage</li>
-								<li>3GB bandwidth</li>
-								<li>Free Email Addresses</li>
-								<li>24/7 security monitoring</li>
-								<li>24/7 technical support</li>
-							</ul>
-							<a href="" class="site-btn">Get Plan</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-8 offset-md-2 offset-lg-0">
-					<div class="pricing-plan">
-						<div class="pricing-title">
-							<h4>VIP Plan</h4>
-						</div>
-						<div class="pricing-body">
-							<h2>$9<span>/Month</span></h2>
-							<ul>
-								<li>1GB storage</li>
-								<li>3GB bandwidth</li>
-								<li>Free Email Addresses</li>
-								<li>24/7 security monitoring</li>
-								<li>24/7 technical support</li>
-							</ul>
-							<a href="" class="site-btn">Get Plan</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Pricing section end -->
-
-
 
 	<!-- Banner section -->
-	<section class="banner-section set-bg" data-setbg="img/banner-bg.jpg">
+	<section class="banner-section set-bg" data-setbg="img/bg-1.png">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-9 banner-text text-white">
@@ -312,86 +174,6 @@
 		</div>
 	</section>
 	<!-- Banner section end -->
-
-
-
-	<!-- Footer top section -->
-	<section class="footer-top-section text-white spad">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4">
-					<div class="footer-widget about-widget">
-						<img src="./img/logo.png" alt="logo">
-						<p>Proin gravida nibh vel velit auctor aliquet, aenean sollicitudin lorem quis bibendum auctor, nisi elit
-							consequat ipsum.Proin gravida nibh vel velit auctor aliquet, aenean sollicitudin lorem quis bibendum auctor,
-							nisi elit consequat ipsum</p>
-						<div class="fw-social social">
-							<a href="#"><i class="fa fa-pinterest"></i></a>
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="footer-widget">
-						<h4 class="fw-title">Usefull Links</h4>
-						<div class="row">
-							<div class="col-sm-6">
-								<ul>
-									<li><a href="">Web Hosting</a></li>
-									<li><a href="">WordPress Hosting</a></li>
-									<li><a href="">VPS Hosting</a></li>
-									<li><a href="">Cloud Server</a></li>
-									<li><a href="">Reseller Package</a></li>
-									<li><a href="">Dedicated Hosting</a></li>
-								</ul>
-							</div>
-							<div class="col-sm-6">
-								<ul>
-									<li><a href="">Web Hosting</a></li>
-									<li><a href="">WordPress Hosting</a></li>
-									<li><a href="">VPS Hosting</a></li>
-									<li><a href="">Cloud Server</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4  col-md-6">
-					<div class="footer-widget">
-						<h4 class="fw-title">Latest Posts</h4>
-						<div class="fw-latest-post-widget">
-							<div class="lp-item">
-								<div class="lp-thumb set-bg" data-setbg="img/footer-thumb/1.jpg"></div>
-								<div class="lp-content">
-									<h6>Web Hosting for everyone</h6>
-									<span>Oct 21, 2018</span>
-								</div>
-							</div>
-							<div class="lp-item">
-								<div class="lp-thumb set-bg" data-setbg="img/footer-thumb/2.jpg"></div>
-								<div class="lp-content">
-									<h6>Web Hosting for everyone</h6>
-									<span>Oct 21, 2018</span>
-								</div>
-							</div>
-							<div class="lp-item">
-								<div class="lp-thumb set-bg" data-setbg="img/footer-thumb/3.jpg"></div>
-								<div class="lp-content">
-									<h6>Web Hosting for everyone</h6>
-									<span>Oct 21, 2018</span>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Footer top section end -->
-
 
 	<!-- Footer section -->
 	<footer class="footer-section">
