Up to the last form

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<p>Launchpad helps you build a new type of organization, an ExO or Exponential Organization.An ExO is a
 							purpose-driven venture that leverages exponential technologies and a set of common attributes to grow and
 							transform the world </p>
-							<a class="site-btn" href="#community">Join the Community</a>
+						<a class="site-btn ghost" href="#community">Join the Community</a>
 					</div>
 				</div>
 			</div>
@@ -68,7 +68,6 @@
 						sed elementum. Fusce ut turpis felis. Etiam pretium pharetra augue, ac porttitor dolor consequat eget. Cras
 						tempor suscipit enim vehicula ultrices. Mauris sed orci blandit, rhoncus massa non, tincidunt odio. Ut
 						ullamcorper lobortis hendrerit. </p>
-					<a href="#" class="site-btn">Read More</a>
 				</div>
 				<div class="col-lg-6">
 					<img src="./img/dreamer.png" alt="">
@@ -114,10 +113,8 @@
 							</div>
 							<div class="mc-field-group input-group">
 								<strong>Join the general ExO Movement email list </strong>
-								<ul>
-								<li><input type="checkbox" value="4" name="group[189][4]" id="mce-group[189]-189-2"><label for="mce-group[189]-189-2">ExO
-										Movement</label></li>
-								</ul>
+								<div class="checkbox"><input type="checkbox" value="4" name="group[189][4]" id="mce-group[189]-189-2"><label for="mce-group[189]-189-2">ExO
+									Movement</label></div>
 							</div>
 							<div id="mce-responses" class="clear">
 								<div class="response" id="mce-error-response" style="display:none"></div>
@@ -141,9 +138,9 @@
 	<section class="about-section spad pt-18">
 		<div class="container">
 			<div class="row">
-					<div class="col-lg-6">
-							<img src="./img/finder.png" alt="">
-						</div>
+				<div class="col-lg-6">
+					<img src="./img/finder.png" alt="">
+				</div>
 				<div class="col-lg-6 about-text">
 					<h3>Be the change in the world</h3>
 					<p>Nullam lacinia ex eleifend orci porttitor, suscipit interdum augue condimentum. Etiam pretium turpis eget nibh
@@ -151,7 +148,6 @@
 						sed elementum. Fusce ut turpis felis. Etiam pretium pharetra augue, ac porttitor dolor consequat eget. Cras
 						tempor suscipit enim vehicula ultrices. Mauris sed orci blandit, rhoncus massa non, tincidunt odio. Ut
 						ullamcorper lobortis hendrerit. </p>
-					<a href="#" class="site-btn">Read More</a>
 				</div>
 
 			</div>
