--- a/index.html
+++ b/index.html
@@ -82,8 +82,6 @@
 	<section class="domain-search-section spad set-bg" data-setbg="img/bg.png">
 		<div class="container">
 			<div class="section-title st-white">
-				<span class="fa fa-rocket"></span>
-				<p>ExO Launchpad</p>
 				<h2>Do you want to join an upcoming <br>ExO Launchpad class?</h2>
 			</div>
 			<div class="domain-form-warp">
@@ -157,15 +155,35 @@
 	<!-- Banner section -->
 	<section class="banner-section set-bg" data-setbg="img/bg-1.png">
 		<div class="container">
-			<div class="row">
+					<form class="row" action="https://exodevhub.us20.list-manage.com/subscribe/post?u=ccfff1ccf7951d4ec0af22cac&amp;id=8ca8438865"
+					method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
+					novalidate>
 				<div class="col-lg-9 banner-text text-white">
-					<h3>Dedicated hosting solutions only $129.99/month</h3>
-					<p>Proin gravida nibh vel velit auctor aliquet, aenean sollicitudin lorem quis bibendum auctor, nisi elit
-						consequat ipsum</p>
+					<h3>Join the Community?</h3>
+					<div id="mc_embed_signup_scroll">
+							<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+							<div class="mc-field-group">
+								<label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
+								</label>
+								<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+							</div>
+							<div class="mc-field-group">
+								<label for="mce-NAME">Name </label>
+								<input type="text" value="" name="NAME" class="" id="mce-NAME">
+							</div>
+							<div id="mce-responses" class="clear">
+									<div class="response" id="mce-error-response" style="display:none"></div>
+									<div class="response" id="mce-success-response" style="display:none"></div>
+								</div>
+								<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ccfff1ccf7951d4ec0af22cac_8ca8438865"
+									tabindex="-1" value=""></div>
+						</div>
 				</div>
 				<div class="col-lg-3 text-left text-lg-right">
-					<a href="" class="site-btn">Get Started</a>
+					<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="site-btn">
 				</div>
+			</form>
+
 			</div>
 		</div>
 	</section>
